feat: Refactorizar los servicios de inventario para mejorar el manejo de errores y optimizar los métodos
- Se actualizó InventarioProductoService para utilizar excepciones específicas para recursos no encontrados y solicitudes incorrectas.
- Se renombraron los métodos para mayor claridad y coherencia, como listarPorTienda y listarPorTiendaYSede.
- Se mejoraron los métodos crear y actualizar para incluir tiendaId y así mejorar el contexto.
- Se eliminaron los métodos de conversión redundantes y se sustituyeron por un patrón de construcción para DTO.
- Se han mejorado MovimientoInventarioInsumoService y MovimientoInventarioProductoService con una refactorización similar para mayor coherencia.
- Se ha añadido la validación de transferencias en TransferenciaInventarioService para garantizar transiciones de estado correctas.
- Se ha implementado la funcionalidad de eliminación suave para transferencias cambiando su estado en lugar de eliminarlas directamente.